update libuv in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
     - LANG="zh_CN.UTF-8"
     - MSGPACK_PREFIX=$HOME/prebuilt/msgpack-3.1.1 ;
     - MSGPACK_VERSION=3.1.1 ;
-    - LIBUV_PREFIX=$HOME/prebuilt/libuv-1.26.0 ;
-    - LIBUV_VERSION=1.26.0
+    - LIBUV_PREFIX=$HOME/prebuilt/libuv-1.27.0 ;
+    - LIBUV_VERSION=1.27.0
     - CMAKE_PREFIX=$HOME/prebuilt/cmake ;
     - CMAKE_LINUX_URL=https://github.com/Kitware/CMake/releases/download/v3.13.4/cmake-3.13.4-Linux-x86_64.sh ;
 matrix:
@@ -109,7 +109,7 @@ install:
           
       fi
       
-    - if [ "$TRAVIS_OS_NAME" == "osx" ] ; then brew upgrade cmake; brew install --HEAD libuv; fi
+    - if [ "$TRAVIS_OS_NAME" == "osx" ] ; then brew upgrade cmake; brew install libuv; fi
 
 before_script:
   - REPO_DIR=$PWD;
