优化Windows下的系统库依赖

--- a/sample/CMakeLists.txt
+++ b/sample/CMakeLists.txt
@@ -29,6 +29,7 @@ foreach(SAMPLE_SRC_FILE IN LISTS SAMPLE_SRC_LIST)
 	    ${PROJECT_LIB_LINK}
 		${3RD_PARTY_LIBUV_LINK_NAME}
         ${3RD_PARTY_ATFRAME_UTILS_LINK_NAME}
+        ${3RD_PARTY_LIBUV_LINK_DEPS}
         ${COMPILER_OPTION_EXTERN_CXX_LIBS}
     )
 endforeach()
