--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(atbus_unit_test
     ${PROJECT_TEST_LIB_LINK}
     ${3RD_PARTY_LIBUV_LINK_NAME}
     ${3RD_PARTY_ATFRAME_UTILS_LINK_NAME}
+    ${3RD_PARTY_LIBUV_LINK_DEPS}
     ${COMPILER_OPTION_EXTERN_CXX_LIBS}
 )
 
