--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -31,6 +31,7 @@ foreach(TOOLS_SRC_FILE IN LISTS TOOLS_SRC_LIST)
 		${PROJECT_TOOLS_LIB_LINK}
         ${3RD_PARTY_LIBUV_LINK_NAME}
         ${3RD_PARTY_ATFRAME_UTILS_LINK_NAME}
+        ${3RD_PARTY_LIBUV_LINK_DEPS}
         ${COMPILER_OPTION_EXTERN_CXX_LIBS}
 	)
 
