--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,9 @@ include("${CMAKE_CURRENT_LIST_DIR}/tools/tools.macro.cmake")
 find_package(Threads)
 if (CMAKE_USE_PTHREADS_INIT)
     add_definitions(-D_POSIX_MT_)
-    list(APPEND COMPILER_OPTION_EXTERN_CXX_LIBS pthread)
+    if(NOT ANDROID)
+        list(APPEND COMPILER_OPTION_EXTERN_CXX_LIBS pthread)
+    endif ()
     if (THREADS_PREFER_PTHREAD_FLAG)
         add_definitions(${THREADS_PREFER_PTHREAD_FLAG})
     endif ()
