--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ build_*
 /3rd_party/*/pkg
 /3rd_party/libuv/repo-*
 /3rd_party/c_cpp_utils/repo
+/3rd_party/atframe_utils/repo
 
 # project files
 /.idea
@@ -36,3 +37,4 @@ build_*
 
 # generated file
 /include/detail/libatbus_config.h
+/include/detail/libatbus_protocol_generated.h
