--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,8 @@ file(GLOB_RECURSE PROJECT_LIB_SRC_LIST
     ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.cc
     ${PROJECT_LIBATBUS_ROOT_SRC_DIR}/*.cxx
 )
+list(APPEND PROJECT_LIB_SRC_LIST "${PROJECT_LIBATBUS_ROOT_INC_DIR}/detail/libatbus_protocol_generated.h")
+list(REMOVE_DUPLICATES PROJECT_LIB_SRC_LIST)
 source_group_by_dir(PROJECT_LIB_SRC_LIST)
 
 
