--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,29 @@
         "__config": "cpp",
         "__nullptr": "cpp",
         "algorithm": "cpp",
-        "cstdarg": "cpp"
+        "cstdarg": "cpp",
+        "condition_variable": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "memory_resource": "cpp",
+        "regex": "cpp",
+        "set": "cpp",
+        "string": "cpp",
+        "mutex": "cpp",
+        "__bit_reference": "cpp",
+        "__debug": "cpp",
+        "__functional_base": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__mutex_base": "cpp",
+        "__split_buffer": "cpp",
+        "__string": "cpp",
+        "__threading_support": "cpp",
+        "__tree": "cpp",
+        "__tuple": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
