--- a/include/detail/libatbus_config.h.in
+++ b/include/detail/libatbus_config.h.in
@@ -56,10 +56,11 @@
 
 #cmakedefine ATBUS_MACRO_WITH_UNIX_SOCK @ATBUS_MACRO_WITH_UNIX_SOCK@
 
-#if defined(ATBUS_MACRO_BUILD_API)
-     #define ATBUS_MACRO_API UTIL_SYMBOL_EXPORT
-#else
-     #define ATBUS_MACRO_API UTIL_SYMBOL_IMPORT
-#endif
+// #if defined(ATBUS_MACRO_BUILD_API)
+//      #define ATBUS_MACRO_API UTIL_SYMBOL_EXPORT
+// #else
+//      #define ATBUS_MACRO_API UTIL_SYMBOL_IMPORT
+// #endif
+#define ATBUS_MACRO_API
 
 #endif
