--- a/3rd_party/protobuf/run-build-release.ps1.in
+++ b/3rd_party/protobuf/run-build-release.ps1.in
@@ -22,9 +22,9 @@ if ( "@CMAKE_SYSTEM@" -ne "@CMAKE_HOST_SYSTEM@" ) {
     & @3RD_PARTY_PROTOBUF_BUILD_FLAGS_CMD@ "-DCMAKE_INSTALL_PREFIX=@3RD_PARTY_PROTOBUF_HOST_ROOT_DIR@"
 
     if (("@MSVC@".ToLower() -ne "true") -or ("@MSVC@".ToLower() -ne "yes")) {
-        & @CMAKE_COMMAND@ --build . --target install --config Debug @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
+        & "@CMAKE_COMMAND@" --build . --target install --config Debug @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
     }
-    & @CMAKE_COMMAND@ --build . --target install --config Release @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
+    & "@CMAKE_COMMAND@" --build . --target install --config Release @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
 
 }
 else {
@@ -45,8 +45,8 @@ else {
 }
 
 if (("@MSVC@".ToLower() -eq "true") -or ("@MSVC@".ToLower() -eq "yes")) {
-    & @CMAKE_COMMAND@ --build . --target install --config Debug @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
+    & "@CMAKE_COMMAND@" --build . --target install --config Debug @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
 }
 
-& @CMAKE_COMMAND@ --build . --target install --config Release @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
+& "@CMAKE_COMMAND@" --build . --target install --config Release @3RD_PARTY_PROTOBUF_BUILD_MULTI_CORE@
 
