--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,12 +17,12 @@
         "editor.formatOnSave": false
     },
     "files.associations": {
+        "*.ejs": "html",
         "*.h.in": "cpp",
         "*.h.cpp": "cpp",
         "*.ps1.in": "powershell",
         "*.sh.in": "shellscript",
         "*.bat.in": "bat",
-        "*.ejs": "html",
         "array": "cpp",
         "atomic": "cpp",
         "*.tcc": "cpp",
@@ -96,6 +96,9 @@
         "ios": "cpp",
         "locale": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "xstring": "cpp",
+        "xutility": "cpp",
+        "*.inc": "cpp"
     }
 }
